# precision-landing-ros2

./: README.md  install_opencv.sh
marker/: board_converted.dxf  convert_to_dxf.py
src/: precision_landing_information_interaction_protocol.md  precision_landing_operation_regulation.md
src/aruco_tracker/: ArucoTracker.cpp  ArucoTracker.hpp  CMakeLists.txt  README.md  landing_detector.hpp  landing_detector_node.cpp  package.xml
src/aruco_tracker/cfg/: board.json  board.yaml  board_1.json  params.yaml  single_89.json  single_89_sim.json
src/aruco_tracker/launch/: aruco_tracker.launch.py  landing_detector.launch.py  landing_detector_sim.launch.py
src/precision_landing_ros2/: README.md  package.xml  setup.cfg  setup.py
src/precision_landing_ros2/config/: precision_landing_params.yaml
src/precision_landing_ros2/launch/: precision_landing.launch.py
src/precision_landing_ros2/precision_landing_ros2/: constants.py  coordinate_transforms.py  minimal_timer_test.py  pid_controller.py  precision_lander_node.py  state_machine.py
